--- a/pom.xml
+++ b/pom.xml
@@ -172,6 +172,12 @@
             <version>1.4</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.8.4</version>
+        </dependency>
 
         <dependency>
             <groupId>org.apache.poi</groupId>
@@ -258,6 +264,18 @@
 		    <version>2.4</version>
 		    <classifier>jdk15</classifier>    
 		</dependency>
+
+        <dependency>
+            <groupId>cglib</groupId>
+            <artifactId>cglib</artifactId>
+            <version>3.2.10</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20180813</version>
+        </dependency>
 		
 		
 				<!-- AOP -->
